feat: Доделал лайки

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 hs_err_pid*
 out/
 target/
-!.mvn/wrapper/maven-wrapper.jar
+#!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -44,3 +44,4 @@ build/
 
 *.db
 db/*
+/.mvn/
