fix: Pull request содержит двоичные файлы. Удалите их (*.class, *.jar, *.DS_Store ...) из PR

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 hs_err_pid*
 out/
 target/
-!.mvn/wrapper/maven-wrapper.jar
+mvnw
+mvnw.cmd
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -44,3 +45,4 @@ build/
 
 *.db
 db/*
+/.mvn/
